# strp

./: Cargo.toml  LICENSE.md  README.md  makefile
examples/: basic.rs
examples/no_std/: Cargo.toml  target.json
examples/no_std/.cargo/: config.toml
examples/no_std/src/: main.rs
examples/with_std/: Cargo.toml
examples/with_std/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  tests.rs
