[package]
name = "strp"
author = "Kim-Dewelski"
version = "0.1.1"
edition = "2021"
description = "a simple string parsing utility crate, supporting no_std contexts."
repository = "https://github.com/Kim-Dewelski/strp"
readme = "README.md"
keywords = ["strings", "string", "parsing"]
categories = ["parsing"]
license = "MIT"
include = [
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]

[dependencies]
strp_macros = "1.0.1"
cfg-if = "1.0.0"

[features]
no_std = []

[workspace]
members = [
    "macros",
]
exclude = ["examples/no_std", "examples/with_std"]

