[package]
name = "strp"
author = "Kim-Dewelski"
version = "0.2.2"
edition = "2021"
description = "a simple string parsing utility crate, supporting no_std contexts."
repository = "https://github.com/Kim-Dewelski/strp"
readme = "README.md"
keywords = ["strings", "string", "parsing"]
categories = ["parsing"]
license = "MIT"
include = [
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]

[dependencies]
strp_macros = {path = "macros", version = "2.0.2"}

[features]
no_std = []

[workspace]
members = [
    "macros",
]
exclude = ["examples/no_std", "examples/with_std"]

