[package]
name = "strp"
authors = ["Kim-Dewelski"]
version = "0.3.5"
edition = "2021"
description = "a simple string parsing utility crate, supporting no_std contexts."
repository = "https://github.com/Kim-Dewelski/strp"
readme = "README.md"
keywords = ["strings", "string", "parsing"]
categories = ["parsing"]
license = "MIT"
include = [
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]

[dependencies]
strp_macros = {path = "macros", version = "2.1.0"}

[features]
default = ["std"]

std = ["strp_macros/std"]

[workspace]
members = [
    "macros",
]
exclude = ["examples/no_std", "examples/with_std"]

