[package]
name = "strp_macros"
version = "1.0.0"
edition = "2021"
description = "a macro library intended to be used alongside strp"
license = "MIT"
repository = "https://github.com/Kim-Dewelski/strp"
keywords = ["strings", "string", "parsing"]
categories = ["parsing"]

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0.98", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.42"